--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
-
         <meta charset="UTF-8">
         <title>Softinperu</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -100,11 +98,7 @@
 
                 <div class="intro-info">
 
-                    <h2>Te brindamos<br><span>soluciones</span><br>para hacer crecer tu negocio!</h2>
-                    <div>
-                        <a href="#contact" class="btn-get-started scrollto">Contáctanos</a>
-                        <a href="#services" class="btn-services scrollto">Nuestros servicios</a>
-                    </div>
+                    <h2>Te preparamos para tu ingreso directo a las mejores universidades del Perú</h2>
                 </div>
 
             </div>
