--- a/index.html
+++ b/index.html
@@ -62,21 +62,8 @@
                 <nav class="main-nav float-right d-none d-lg-block">
                     <ul>
                         <li class="active"><a href="#intro">Inicio</a></li>
-                        <li><a href="#about">Nosotros</a></li>
-                        <li><a href="#services">Servicios</a></li>
-                        <li><a href="#portfolio">Portafolio</a></li>
-                        <li><a href="#team">Equipo</a></li>
-                        <li class="drop-down"><a href="">Innovación</a>
-                            <ul>
-                                <li class="drop-down"><a href="#">Educación</a>
-                                    <ul>
-                                        <li><a href="https://micole.com.es/">MiCole</a></li>
-                                        <li><a href="https://looret.pe">Looret</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="#contact">Contáctanos</a></li>
+                        <li><a href="#about">Beneficios</a></li>
+                        <li><a href="#services">Dona</a></li>
                     </ul>
                 </nav><!-- .main-nav -->
             </div>
@@ -97,8 +84,11 @@
                 </div>
 
                 <div class="intro-info">
-
-                    <h2>Te preparamos para tu ingreso directo a las mejores universidades del Perú</h2>
+                    <h2>PREPÁRATE PARA INGRESAR A LA UNMSM</h2>
+                    <h3>Desarrolla simulacros virtuales peronalizados de acuerdo a la carrera de tu elección</h3>
+                    <div>
+                        <a href="#contact" class="btn-get-started scrollto">!Empieza ahora, es gratis!</a>
+                    </div>
                 </div>
 
             </div>
