--- a/index.html
+++ b/index.html
@@ -103,35 +103,23 @@
                 <div class="container">
 
                     <header class="section-header">
-                        <h3>Sobre nosotros</h3>
-                        <p>Agencia digital peruana, brindando soluciones de acuerdo a tus necesitades.</p>
+                        <h3>Beneficios</h3>
                     </header>
 
                     <div class="row about-container">
 
                         <div class="col-lg-6 content order-lg-1 order-2">
-                            <p>
-                                Softinperu, es una agencia digital fundada en el 2017 en la Facultad de sistemas e informatica de la UNMSM, con el objetivo de brindar soluciones tecnológicas eficientes, seguras y confiables.<br>En softinperu estamos comprometidos contigo y tu crecimiento. 
-                            </p>
-                            <h5 class="title2">Lo que nos hace diferentes:</h5>
                             <div class="icon-box wow fadeInUp">
                                 <div class="icon"><i class="fa fa-users"></i></div>
-                                <h4 class="title"><a href="">Equipo innovador</a></h4>
-                                <p class="description">Nos renovamos constantemente. Sabemos que lo que sirve hoy es obsoleto mañana, por ello siempre buscamos innovar para brindarte lo mejor.</p>
+                                <h4 class="title"><a href="">Simulacros de acuerdo a la carrera de tu elección</a></h4>
+                                <p class="description">En Looret sabemos que la preparación no es igual para todos, ya que depende de la carrera que elijas, por eso hemos preparado muchas variedades de preguntas y simulacros orientados a cada carrera, para que tu preparación sea sin rodeos.</p>
                             </div>
 
                             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
                                 <div class="icon"><i class="fa fa-plane"></i></div>
-                                <h4 class="title"><a href="">Caminamos contigo</a></h4>
-                                <p class="description">Te asesoramos cuando lo necesites y te brindaremos soporte en el momento que desees.</p>
+                                <h4 class="title"><a href="">Seguimiento de tu avance</a></h4>
+                                <p class="description">En Looret nos preocupamos, para que en verdad logres el resultado que deseas, por ello te brindaremos un reporte de como van tus calificaciones en nuestro sistema para que así sepas si estás avanzando.</p>
                             </div>
-
-                            <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-                                <div class="icon"><i class="fa fa-thumbs-up"></i></div>
-                                <h4 class="title"><a href="">Visión compartida</a></h4>
-                                <p class="description">Nos ponemos tu camiseta, tu meta tambien será nuestra meta. Buscaremos las mejores soluciones como si fueramos los dueños de tu negocio.</p>
-                            </div>
-
                         </div>
 
                         <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
