añadiendo href de softinperu

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="container">
 
                     <header class="section-header">
-                        <h3>Servicios</h3>
+                        <h3>Donación</h3>
                         <p>Te ofrecemos cualquier servicio digital, pero las más demandadas son estas:</p>
                     </header>
 
@@ -204,7 +204,7 @@
                 </div>
                 <div class="credits">
                    
-                    Diseñado por <a href="#">Softinperu</a>
+                    Diseñado por <a href="https://softinperu.com/">Softinperu</a>
                 </div>
             </div>
         </footer><!-- #footer -->
