--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Softinperu</title>
+        <title>Looret</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="title" content="Softinperu" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,7 +15,7 @@
 
 
         <!-- Favicons -->
-        <link href="img/favicon.png" rel="icon">
+        <link href="img/looret/icono.png" rel="icon">
         <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
         <!-- Google Fonts -->
@@ -85,7 +85,7 @@
 
                 <div class="intro-info">
                     <h2>PREPÁRATE PARA INGRESAR A LA UNMSM</h2>
-                    <h3>Desarrolla simulacros virtuales peronalizados de acuerdo a la carrera de tu elección</h3>
+                    <h3>Desarrolla simulacros virtuales personalizados de acuerdo a la carrera de tu elección</h3>
                     <div>
                         <a href="#contact" class="btn-get-started scrollto">!Empieza ahora, es gratis!</a>
                     </div>
@@ -123,7 +123,7 @@
                         </div>
 
                         <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
-                            <img src="img/about-img.svg" class="img-fluid" alt="">
+                            <img src="img/nosotros/estudiates-academia.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
