implementando sección de donación

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <ul>
                         <li class="active"><a href="#intro">Inicio</a></li>
                         <li><a href="#about">Beneficios</a></li>
-                        <li><a href="#services">Donación</a></li>
+                        <li><a href="#services" class="donation">Donación</a></li>
                     </ul>
                 </nav><!-- .main-nav -->
             </div>
@@ -87,7 +87,7 @@
                     <h2>PREPÁRATE PARA INGRESAR A LA UNMSM</h2>
                     <h3>Desarrolla simulacros virtuales personalizados de acuerdo a la carrera de tu elección</h3>
                     <div>
-                        <a href="#contact" class="btn-get-started scrollto">!Empieza ahora, es gratis!</a>
+                        <a href="#contact" class="btn-get-started scrollto">¡Empieza ahora, es gratis!</a>
                     </div>
                 </div>
 
@@ -137,56 +137,22 @@
 
                     <header class="section-header">
                         <h3>Donación</h3>
-                        <p>Te ofrecemos cualquier servicio digital, pero las más demandadas son estas:</p>
                     </header>
 
-                    <div class="row">
-
-                        <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
-                            <div class="box">
-                                <div class="icon"><i class="ion-ios-film-outline" style="color: #ff689b;"></i></div>
-                                <h4 class="title"><a href="#services">Marketing Digital</a></h4>
-                                <p class="description">Te bridaremos un completo estudio de marketing para tu negocio, te daremos la mejor solución y lo implementaremos de la mano contigo</p>
-                            </div>
+                    <div class="row about-extra">
+                        <div class="col-lg-6 wow fadeInUp">
+                            <img src="img/nosotros/universidades.png" class="img-fluid" alt="">
                         </div>
-                        <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
-                            <div class="box">
-                                <div class="icon"><i class="ion-android-apps" style="color: #e9bf06;"></i></div>
-                                <h4 class="title"><a href="#services">Desarrollo de apps</a></h4>
-                                <p class="description">Desarrollamos apps en android y IOS hecho a la medida de tus gustos y funcionalidades. Puedes solicitarlo nativos e híbrido</p>
-                            </div>
+                        <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
+                            <h4>Ayúdanos a implementar simulacros de preparación para otras universidades como UNI, UNFV, UNAC y UNALM</h4>
+                            <p>
+                                <B> Número de cuenta BCP Soles:</B> 19439947484091  
+                            </p>
+                            <p>
+                                <B>Número de cuenta interbancaria:</B> 00219413994748409190  
+                            </p>
+                            <h4>¡Gracias por tu donación!</h4>
                         </div>
-
-                        <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-                            <div class="box">
-                                <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-                                <h4 class="title"><a href="#services">Transformación digital</a></h4>
-                                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-                            <div class="box">
-                                <div class="icon"><i class="ion-ios-monitor-outline" style="color:#41cf2e;"></i></div>
-                                <h4 class="title"><a href="#services">Diseño grafico</a></h4>
-                                <p class="description">No solo diseñamos un dibujo, diseñamos experiencias. Convertiremos tus ideas y tu imaginación en un diseño increible.</p>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-                            <div class="box">
-                                <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
-                                <h4 class="title"><a href="#services">Desarrollo Web</a></h4>
-                                <p class="description">Desarrollamos el sistema web que nos pidas, desde páginas web para promocionar tu negocio hasta sistemas complejos.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-                            <div class="box">
-                                <div class="icon"><i class="ion-bag" style="color: #4680ff;"></i></div>
-                                <h4 class="title"><a href="#services">Ecommerce</a></h4>
-                                <p class="description">Desarrollamos tu plataforma para que puedas vender lo que desees, donde quieras y en cualquier momento. </p>
-                            </div>
-                        </div>
-
                     </div>
 
                 </div>
