--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="intro-info">
                     <h2>PREPÁRATE PARA INGRESAR A LA UNMSM</h2>
                     <h3>Desarrolla simulacros virtuales personalizados de acuerdo a la carrera de tu elección</h3>
-                    <div>
+                    <div class="center">
                         <a href="#contact" class="btn-get-started scrollto">¡Empieza ahora, es gratis!</a>
                     </div>
                 </div>
